Read teams from CSV and display in list view (#6)
* Create team_cell.xml and team_list.xml

* Implement team list

Uses hard coded list of teams
Will update to CSV

* Pull teams from CSV file and display in list view.

Co-authored-by: Justin Yeung <justinmyeung@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
         package="com.example.pit_collection_2020">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
 
-    <application android:allowBackup="true"
+    <application android:requestLegacyExternalStorage="true"
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
