Data collection UI (#8)
* Setup ui for pit collection

* Finish collection UI

* Connect TeamListActivity to CollectionActivity

* Connect TeamListActivity to CollectionActivity and display team number in collection

* Change spinner to have a background color

* Add comments

* Add comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,17 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".TeamListActivity" >
+            android:name=".TeamListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".CollectionActivity"
+            android:screenOrientation="portrait">
         </activity>
 
     </application>
