Create mode selection to select either Pit Collection or SEALs mode. (#31)
* Add ModeSelectionActivity to AndroidManifest.

* Add mode_selection xml.

* Add IDs to mode selection buttons.

* Add SEALs Collection Activity.

* Add Constants for mode selection enums and manageStorage for
sharedPreferences usage.

* Make ModeSelectionActivity to select collection mode and modify intent
of selecting a team in TeamListActivity.

* Change collection names from objective to subjective.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".TeamListActivity"
+            android:name=".ModeSelectionActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,17 @@
         </activity>
 
         <activity
-            android:name=".CollectionActivity"
+            android:name=".TeamListActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".PitCollectionActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".SEALsCollectionActivity"
             android:screenOrientation="portrait">
         </activity>
 
