Implement Camera/Picture function (#27)
* increase sdk version to use CameraX

* add picture_types array to populate spinner

* add purple, green, and dark gray to colors.xml

* add camera symbol into drawable directory

* create camera preview and screen layout

* create createSpinner function in a file to be referenced throughout the app

* add Camera activity and camera permissions into Manifest

* add camera button to collection screen

* implement createSpinner function and add the cameraButton

* add camera permissions into requestPermissions file

* Request Camera in TeamsListActivity
calls the RequestCamera function when the app opens

* create CameraActivity

* add compile options back into the build.gradle

* fix empty file name after team num

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
@@ -38,6 +39,12 @@
             android:name=".SEALsCollectionActivity"
             android:screenOrientation="portrait">
         </activity>
+
+        <activity
+            android:name=".CameraActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
 
     </application>
 </manifest>
