--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity
+            android:name=".PictureConfirmation"
+            android:screenOrientation="portrait">
+        </activity>
 
     </application>
 </manifest>
