--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
-        android:label="@string/app_name"
+        android:label="Pit Collection"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
