--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.pit_collection_2020"
+        applicationId "com.frc1678.pit_collection"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
