--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.example.pit_collection_2020">
+    package="com.frc1678.pit_collection">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <application android:requestLegacyExternalStorage="true"
+    <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:label="Pit Collection"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +18,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ModeSelectionActivity"
+            android:name="com.frc1678.pit_collection.ModeCollectionSelectActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,29 +27,24 @@
         </activity>
 
         <activity
-            android:name=".TeamListActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:name="com.frc1678.pit_collection.TeamListActivity"
+            android:screenOrientation="portrait"></activity>
 
         <activity
-            android:name=".PitCollectionActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:name="com.frc1678.pit_collection.CollectionObjectiveActivity"
+            android:screenOrientation="portrait"></activity>
 
         <activity
-            android:name=".SEALsCollectionActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:name="com.frc1678.pit_collection.CollectionSubjectiveActivity"
+            android:screenOrientation="portrait"></activity>
 
         <activity
-            android:name=".CameraActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:name="com.frc1678.pit_collection.CameraActivity"
+            android:screenOrientation="portrait"></activity>
 
         <activity
-            android:name=".PictureConfirmation"
-            android:screenOrientation="portrait">
-        </activity>
+            android:name="com.frc1678.pit_collection.CameraConfirmationActivity"
+            android:screenOrientation="portrait"></activity>
 
     </application>
 </manifest>
