--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.frc1678.pit_collection">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,13 +10,14 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
-        android:label="Pit Collection"
+        android:fullBackupContent="@null"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name="com.frc1678.pit_collection.ModeCollectionSelectActivity"
@@ -28,23 +30,31 @@
 
         <activity
             android:name="com.frc1678.pit_collection.TeamListActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
-            android:name="com.frc1678.pit_collection.CollectionObjectiveActivity"
-            android:screenOrientation="portrait"></activity>
+            android:name="com.frc1678.pit_collection.CollectionObjectiveDataActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name="com.frc1678.pit_collection.CollectionSubjectiveActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name="com.frc1678.pit_collection.CameraActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name="com.frc1678.pit_collection.CameraConfirmationActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.frc1678.pit_collection.CollectionActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.frc1678.pit_collection.CollectionObjectiveActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 </manifest>
