Add picture type to picture confirmation screen. (#71)
* Add picture type to confirmation screen.

* Remove 2020 from app name.

* Update TeamListActivity to remove warnings.

* Update version number to 2.0.2.

* Add picture type to confirmation screen.

* Display correctly capitalized and formatted picture type name.

* Remove internal storage permissions.

* Add requestLegacyExternalStorage to AndroidManifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.frc1678.pit_collection">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:fullBackupContent="@null"
         android:icon="@mipmap/ic_launcher"
